# leds

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
app/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  styles.css
app/src/data/: catalog.ts
app/src/panels/: ModuleLibrary.tsx  PropertyPanel.tsx
app/src/viewport/: Viewport.tsx
catalog/: README.md  manifest.json
catalog/modules/: elf-sol-plus-2smd-2835-white.json  elf-sol-plus-3smd-2835-cold-white.json  elf-sol-plus-dot-1smd-2835-warm-white.json
catalog/schema/: module.schema.json
crates/leds-catalog/: Cargo.toml
crates/leds-catalog/src/: error.rs  lib.rs  types.rs
crates/leds-cli/: Cargo.toml
crates/leds-cli/src/: main.rs
crates/leds-core/: Cargo.toml
crates/leds-core/src/: lib.rs  pipeline.rs
crates/leds-electrical/: Cargo.toml
crates/leds-electrical/src/: lib.rs
crates/leds-geometry/: Cargo.toml
crates/leds-geometry/src/: contour.rs  distance.rs  lib.rs  offset.rs  topology.rs
crates/leds-import/: Cargo.toml
crates/leds-import/src/: error.rs  lib.rs  svg.rs
crates/leds-lighting/: Cargo.toml
crates/leds-lighting/src/: lib.rs
crates/leds-placement/: Cargo.toml
crates/leds-placement/src/: hamp.rs  lib.rs
docs/: 01_TECHNICAL_SPECIFICATION.md  02_ARCHITECTURE.md  03_UML.md  04_DATABASE.md  05_PROJECT_STRUCTURE.md  06_DEVELOPMENT_PLAN.md  07_RISKS.md  08_ALGORITHMS_PLACEMENT.md  09_ALGORITHMS_LIGHTING.md
