[package]
name = "leds-core"
description = "LEDS orchestration facade"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
leds-catalog = { workspace = true }
leds-geometry = { workspace = true }
leds-import = { workspace = true }
leds-placement = { workspace = true }
leds-lighting = { workspace = true }
leds-electrical = { workspace = true }
