[package]
name = "leds-geometry"
description = "Contour topology, offset, distance fields"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
geo = { workspace = true }
rayon = { workspace = true }
i_overlay = "4.0"
i_shape = "1.14"
i_float = "1.15"
