[package]
name = "leds-lighting"
description = "Light spot simulation and uniformity heatmap"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
leds-catalog = { workspace = true }
leds-geometry = { workspace = true }
leds-placement = { workspace = true }
rayon = { workspace = true }
